# secsgem_cyg

./: .gitignore  pyproject.toml  zhong_che_zhu_zhou_temp.py
secsgem/common/: protocol.py  settings.py  tcp_server_connection.py
secsgem/gem/: communication_state_machine.py  equipmenthandler.py  handler.py
secsgem/hsms/: protocol.py
secsgem/secs/data_items/: tiack.py
secsgem/secs/functions/: __init__.py  _all.py  s02f31.py  s02f32.py
secsgem/secs/variables/: base.py
