[tool.poetry]
name = "secsgem"
version = "1.0.0"
description = ""
authors = ["WeiLiu <wei.l@cyg.com>"]
readme = "README.md"
packages = [{include = "secsgem"},]

[tool.poetry.dependencies]
python = "^3.10"
serial = "^0.0.97"
python-dateutil = "^2.9.0.post0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
